--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nixton9.github.io/ColorOrganizer",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -13,11 +14,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy": "gh-pages -d -build"
+    "eject": "react-scripts eject"
 
   },
   "eslintConfig": {
@@ -31,6 +32,5 @@
   ],
   "devDependencies": {
     "gh-pages": "^2.0.1"
-  },
-  "homepage": "https://nixton9.github.io/ColorOrganizer"
+  }
 }
